ui-service/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
        - name: ui-service
          image: ui-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
