ui-service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: NodePort
  selector:
    app: ui-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
